# os_temple

./: .gitignore  .gitmodules  Cargo.toml  README.md  x86_64-custom.json  x86_64-customold.json
.cargo/: config.toml
blog_os_gen1/: Cargo.toml
blog_os_gen1/data/: cozette.otb
blog_os_gen1/src/: acpi_aml.rs  allocator.rs  fb.rs  interrupts.rs  main.rs  memory.rs
blog_os_gen1/src/allocator/: fixed_size_block.rs
blog_os_gen1/src/command/: acpi.rs  mod.rs  pci.rs
blog_os_gen1/src/pci/: capabilities.rs  lookup.rs  mod.rs
blog_os_gen1/src/task/: keyboard.rs  simple_executor.rs
blog_os_gen1/src/virtio/: mod.rs  transport.rs
boot/: Cargo.toml
boot/src/: main.rs
lib/vmm/: Cargo.toml
lib/vmm/src/: lib.rs
lib/vmm/src/x86_64/: mod.rs
src/: fb.rs  interrupts.rs  main.rs
src/allocator/: fixed_size_block.rs
src/task/: executor.rs  mod.rs
vmm/: Cargo.toml  build.rs
vmm/simple_bin/: Makefile  guest.c  guest.ld  payload  payload.ld  payload64.text
vmm/src/: display.rs  elf.rs  hal.rs  kvm.rs  main.rs  util.rs  whp.rs
vmm/src/ffi/: kvm.rs  kvm_inline.rs  mod.rs
vmm/wrappers/: kvm.h
vmm_test_bin/: Cargo.toml  build.rs
vmm_test_bin/initrd/: motd.txt
vmm_test_bin/src/: fb.rs  gdt.rs  initrd.rs  interrupts.rs  iobasic.rs  main.rs
vmm_test_bin/src/allocator/: mod.rs
vmm_test_bin/src/fb/: console.rs  console.rs.bak  mod.rs  psf.rs
vmm_test_bin/src/task/: executor.rs  mod.rs
vmm_test_bin/src/virtio/: blk.rs  mod.rs
