[package]
name = "blog_os_gen1"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000"
kernel-stack-size = 1048576

[dependencies]
bootloader = "0.10.12"
x86_64 = "0.14.7"
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }
micromath = "2.0.0"
font8x8 = { version = "0.3.1", default-features = false, features = [
    "unicode",
] }
acpi = "4.1"
linked_list_allocator = "0.10.1"
apic = { git = "https://github.com/rust-osdev/apic" }
# This is the newest version of this that works
aml = "0.16"
volatile = "0.4"
paste = "*"
pc-keyboard = "0.5.0"
# seglisp = { path = "../seglisp/seglisp"}
pci_types = "0.2.0"
bitfield = "*"
bitflags = "1.3"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
