[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
elfloader = "0.16"
log = "0.4"
env_logger = "0.10"
x86_64 = "=0.14.10"
vulkano = "0.32"
vulkano-win = "0.32"
winit = "0.27"
libc = "0.2"
virtio-device = { path = "../lib/virtio/crates/virtio-device" }
virtio-blk = { path = "../lib/virtio/crates/devices/virtio-blk", features = ["backend-stdio"] }
virtio-queue = { path = "../lib/virtio/crates/virtio-queue" }
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
libwhp = {path = "../lib/whp" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.26", features = ["fs", "ioctl", "feature"] }
gdbstub = "0.6"


[build-dependencies]
bindgen = "0.63"
